using System;
using System.Collections.Generic;
using System.Text;

namespace Unievent.Domain.Entities
{
    public class EmailModel
    {
        public string Titulo { get; set; }
        public string Mensagem { get; set; }
        public string Destinatario { get; set; }
    }
}
