namespace Unievent.Domain.Entities
{
    public class EntidadeBase
    {
        public int Id { get; set; }
    }
}
