namespace Unievent.Domain.Enuns
{
    public enum Categoria
    {
        Palestra,
        Workshop,
        Feira,
        Evento,
        Festa
    }
}