namespace Unievent.Domain.Enuns;

public enum PublicoPermitido
{
    Todos,
    SomenteInternos,
    SomenteExternos
}
