namespace Unievent.Domain.Enuns
{
    public enum Role
    {
        Admin,
        Secretaria,
        Aluno

    }
}
