namespace Unievent.Domain.Enuns;

public enum StatusEnvioCertificado
{
    Pendente,
    Preparando,
    Enviando,
    Enviado,
    FalhaTemporaria,
    FalhaPermanente,
    EnvioIncerto
}
