namespace Unievent.Domain.Enuns;

public enum StatusInscricao
{
    Ativa,
    Cancelada
}
