namespace Unievent.Domain.Enuns;

public enum StatusUsuarioSecretaria
{
    Pendente,
    Ativo,
    Recusado,
    Bloqueado
}
