namespace Unievent.Domain.Enuns;

public enum TipoParticipante
{
    Interno,
    Externo
}
