namespace Unievent.Domain.Enuns;

public enum VisibilidadeEvento
{
    Publico,
    Privado
}
